--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,9 @@
-.mat-card-simples{
+.mat-card-simples {
   max-width: 300px;
-  background-color: aliceblue;
+  background-color: #ccc;
   margin-top: 10px;
+}
+
+.mat-form-principal {
+  margin-left: 5px;
 }
